Tango/DLL Files/TANGO DLL for Visual Studio VC++6.0 (32 Bit)/TangoLSX_API.h


TANGOAPI int TANGOCALL LSX_EnableCommandRetry (int lLSID, BOOL bAValue);

TANGOAPI int TANGOCALL LSX_MoveEx (int lLSID, double dX, double dY, double dZ, double dR, BOOL bRelative, BOOL bWait, int lAxisCount);

TANGOAPI int TANGOCALL LSX_SetDigitalOutputs (int lLSID, int lValue);

TANGOAPI int TANGOCALL LSX_SetDigitalOutputsE (int lLSID, int lValue);

TANGOAPI int TANGOCALL LSX_GetDigitalInputsE (int lLSID, int *plValue);

TANGOAPI int TANGOCALL LSX_SetFactorMode (int lLSID, BOOL bAFactorMode, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetSnapshot (int lLSID, BOOL bASnapshot);

TANGOAPI int TANGOCALL LSX_SetSnapshotPar (int lLSID, BOOL bHigh, BOOL bAutoMode);

TANGOAPI int TANGOCALL LSX_SetTrigger (int lLSID, BOOL bATrigger);

TANGOAPI int TANGOCALL LSX_SetTriggerPar (int lLSID, int lAxis, int lMode, int lSignal, double dDistance);


TANGOAPI int TANGOCALL LSX_SetLanguage (int lLSID, char *pcPLN);

TANGOAPI int TANGOCALL LSX_GetSwitches (int lLSID, int *plFlags);

TANGOAPI int TANGOCALL LSX_GetSerialNr (int lLSID, char *pcSerialNr, int lMaxLen);

TANGOAPI int TANGOCALL LSX_SetCalibOffset (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_SetRMOffset (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_GetSnapshotPosArray (int lLSID, int lIndex, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_SetAxisDirection (int lLSID, int lXD, int lYD, int lZD, int lAD);

TANGOAPI int TANGOCALL LSX_SetCalibrateDir (int lLSID, int lXD, int lYD, int lZD, int lAD);

TANGOAPI int TANGOCALL LSX_LStepSave (int lLSID);

TANGOAPI int TANGOCALL LSX_SetBPZ (int lLSID, int lAValue);

TANGOAPI int TANGOCALL LSX_SetBPZTrackballFactor (int lLSID, double dAValue);

TANGOAPI int TANGOCALL LSX_SetBPZTrackballBackLash (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_SetBPZJoyspeed (int lLSID, int lAPar, double dAValue);

TANGOAPI int TANGOCALL LSX_SetJoystickWindow (int lLSID, int lAValue);

TANGOAPI int TANGOCALL LSX_SetCurrentDelay (int lLSID, int lX, int lY, int lZ, int lR);

TANGOAPI int TANGOCALL LSX_WaitForAxisStop (int lLSID, int lAFlags, int lATimeoutValue, BOOL *pbATimeout);

TANGOAPI int TANGOCALL LSX_SetProcessMessagesProc (int lLSID, void* pProc);

TANGOAPI int TANGOCALL LSX_SendStringPosCmd (int lLSID, char *pcStr, char *pcRet, int lMaxLen, BOOL bReadLine, int lTimeOut);

TANGOAPI int TANGOCALL LSX_SetWriteLogTextFN (int lLSID, BOOL bAWriteLogText, char *pcALogFN);

TANGOAPI int TANGOCALL LSX_SetXYAxisComp (int lLSID, int lValue);

TANGOAPI int TANGOCALL LSX_GetVersionStrDet (int lLSID, char *pcVersDet, int lMaxLen);

TANGOAPI int TANGOCALL LSX_SetCommandTimeout (int lLSID, int lAtoRead, int lAtoMove, int lAtoCalibrate);

TANGOAPI int TANGOCALL LSX_SetExtValue (int lLSID, int lAName, int lAValue);

TANGOAPI int TANGOCALL LSX_FlushBuffer (int lLSID, int lAValue);

TANGOAPI int TANGOCALL LSX_GetEEPRomValue (int lLSID, byte Offset, byte *pValue);

TANGOAPI int TANGOCALL LSX_SetEEPRomValue (int lLSID, byte Offset, byte Value);

TANGOAPI int TANGOCALL LSX_GetXYAxisComp (int lLSID, int *plValue);

TANGOAPI int TANGOCALL LSX_GetDimensions (int lLSID, int *plXD, int *plYD, int *plZD, int *plAD);

TANGOAPI int TANGOCALL LSX_GetPitch (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_GetGear (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_GetVel (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_GetAccel (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_SetVelFac (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_GetVelFac (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetSpeedPoti (int lLSID, BOOL *pbSpePoti);

TANGOAPI int TANGOCALL LSX_GetMotorCurrent (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_GetReduction (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_GetCurrentDelay (int lLSID, int *plX, int *plY, int *plZ, int *plR);

TANGOAPI int TANGOCALL LSX_SetOutFuncLev (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_GetOutFuncLev (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetActiveAxes (int lLSID, int *plFlags);

TANGOAPI int TANGOCALL LSX_GetAxisDirection (int lLSID, int *plXD, int *plYD, int *plZD, int *plAD);

TANGOAPI int TANGOCALL LSX_GetCalibOffset (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetRMOffset (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetCalibrateDir (int lLSID, int *plXD, int *plYD, int *plZD, int *plAD);

TANGOAPI int TANGOCALL LSX_SetCalibBackSpeed (int lLSID, int lSpeed);

TANGOAPI int TANGOCALL LSX_GetCalibBackSpeed (int lLSID, int *plSpeed);

TANGOAPI int TANGOCALL LSX_SetRefSpeed (int lLSID, int lSpeed);

TANGOAPI int TANGOCALL LSX_GetRefSpeed (int lLSID, int *plSpeed);

TANGOAPI int TANGOCALL LSX_SetPowerAmplifier (int lLSID, BOOL bAmplifier);

TANGOAPI int TANGOCALL LSX_GetPowerAmplifier (int lLSID, BOOL *pbAmplifier);

TANGOAPI int TANGOCALL LSX_SetMotorTablePatch (int lLSID, BOOL bActive);

TANGOAPI int TANGOCALL LSX_GetMotorTablePatch (int lLSID, BOOL *pbActive);

TANGOAPI int TANGOCALL LSX_SetJoystickFilter (int lLSID, BOOL bActive);

TANGOAPI int TANGOCALL LSX_GetJoystickFilter (int lLSID, BOOL *pbActive);

TANGOAPI int TANGOCALL LSX_SetStopPolarity (int lLSID, BOOL bHighActiv);

TANGOAPI int TANGOCALL LSX_GetStopPolarity (int lLSID, BOOL *pbHighActiv);

TANGOAPI int TANGOCALL LSX_SetVLevel (int lLSID, int lVRegion, double dDownLevel, double dUppLevel);

TANGOAPI int TANGOCALL LSX_GetVLevel (int lLSID, int lVRegion, double *pdDownLevel, double *pdUppLevel);

TANGOAPI int TANGOCALL LSX_SetStopAccel (int lLSID, double dXD, double dYD, double dZD, double dAD);

TANGOAPI int TANGOCALL LSX_GetStopAccel (int lLSID, double *pdXD, double *pdYD, double *pdZD, double *pdAD);

TANGOAPI int TANGOCALL LSX_GetVersionStrInfo (int lLSID, char *pcVersInfo, int lMaxLen);

TANGOAPI int TANGOCALL LSX_GetStatusLimit (int lLSID, char *pcLimit, int lMaxLen);

TANGOAPI int TANGOCALL LSX_GetSecurityErr (int lLSID, DWORD *pdwValue);

TANGOAPI int TANGOCALL LSX_GetSecurityStatus (int lLSID, DWORD *pdwValue);

TANGOAPI int TANGOCALL LSX_GetDelay (int lLSID, int *plDelay);

TANGOAPI int TANGOCALL LSX_GetDistance (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_ClearPos (int lLSID, int lFlags);

TANGOAPI int TANGOCALL LSX_SetDigJoySpeed (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_GetDigJoySpeed (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);