Tango/DLL Examples/Visual_Basic/SourceCode/Tango_X.vb

	Declare Function LSX_SetFactorMode Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal bAFactorMode As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
	Declare Function LSX_SetSnapshot Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal bASnapshot As Integer) As Integer
	Declare Function LSX_SetSnapshotPar Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal bHigh As Integer, ByVal bAutoMode As Integer) As Integer
	Declare Function LSX_SetTrigger Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal bATrigger As Integer) As Integer
	Declare Function LSX_SetTriggerPar Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAxis As Integer, ByVal lMode As Integer, ByVal lSignal As Integer, ByVal dDistance As Double) As Integer
	Declare Function LSX_SetLanguage Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal pcPLN As String) As Integer
	Declare Function LSX_GetSwitches Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plFlags As Integer) As Integer
	Declare Function LSX_GetSerialNr Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal pcSerialNr As String, ByVal lMaxLen As Integer) As Integer
	Declare Function LSX_SetCalibOffset Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double) As Integer
	Declare Function LSX_SetRMOffset Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double) As Integer
	Declare Function LSX_GetSnapshotPosArray Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lIndex As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
	Declare Function LSX_SetAxisDirection Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lXD As Integer, ByVal lYD As Integer, ByVal lZD As Integer, ByVal lAD As Integer) As Integer
	Declare Function LSX_SetCalibrateDir Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lXD As Integer, ByVal lYD As Integer, ByVal lZD As Integer, ByVal lAD As Integer) As Integer
	Declare Function LSX_LStepSave Lib "Tango_X.dll" (ByVal LSID As Integer)  As Integer
	Declare Function LSX_SetBPZ Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAValue As Integer) As Integer
	Declare Function LSX_SetBPZTrackballFactor Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dAValue As Double) As Integer
	Declare Function LSX_SetBPZTrackballBackLash Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double) As Integer
	Declare Function LSX_SetBPZJoyspeed Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAPar As Integer, ByVal dAValue As Double) As Integer
	Declare Function LSX_SetJoystickWindow Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAValue As Integer) As Integer
	Declare Function LSX_SetCurrentDelay Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lX As Integer, ByVal lY As Integer, ByVal lZ As Integer, ByVal lR As Integer) As Integer
	Declare Function LSX_MoveEx Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double, ByVal bRelative As Integer, ByVal bWait As Integer, ByVal lAxisCount As Integer) As Integer
	Declare Function LSX_WaitForAxisStop Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAFlags As Integer, ByVal lATimeoutValue As Integer, ByRef pbATimeout As Integer) As Integer
	Declare Function LSX_SetProcessMessagesProc Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal Proc As Object) As Integer
	Declare Function LSX_SendStringPosCmd Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal pcStr As String, ByVal pcRet As String, ByVal lMaxLen As Integer, ByVal bReadLine As Integer, ByVal lTimeOut As Integer) As Integer
	Declare Function LSX_SetDigitalOutputs Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lValue As Integer) As Integer
	Declare Function LSX_SetWriteLogTextFN Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal bAWriteLogText As Integer, ByVal pcALogFN As String) As Integer
	Declare Function LSX_SetDigitalOutputsE Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lValue As Integer) As Integer
	Declare Function LSX_GetDigitalInputsE Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plValue As Integer) As Integer
	Declare Function LSX_EnableCommandRetry Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal bAValue As Integer) As Integer
	Declare Function LSX_SetXYAxisComp Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lValue As Integer) As Integer
	Declare Function LSX_GetVersionStrDet Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal pcVersDet As String, ByVal lMaxLen As Integer) As Integer
	Declare Function LSX_SetCommandTimeout Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAtoRead As Integer, ByVal lAtoMove As Integer, ByVal lAtoCalibrate As Integer) As Integer
	Declare Function LSX_SetExtValue Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAName As Integer, ByVal lAValue As Integer) As Integer
	Declare Function LSX_FlushBuffer Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAValue As Integer) As Integer
	Declare Function LSX_GetEEPRomValue Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal Offset As Object, ByRef pValue As Object) As Integer
	Declare Function LSX_SetEEPRomValue Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal Offset As Object, ByVal Value As Object) As Integer
	Declare Function LSX_GetXYAxisComp Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plValue As Integer) As Integer
	Declare Function LSX_GetDimensions Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plXD As Integer, ByRef plYD As Integer, ByRef plZD As Integer, ByRef plAD As Integer) As Integer
	Declare Function LSX_GetPitch Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdA As Double) As Integer
	Declare Function LSX_GetGear Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdA As Double) As Integer
	Declare Function LSX_GetVel Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdA As Double) As Integer
	Declare Function LSX_GetAccel Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdA As Double) As Integer
	Declare Function LSX_SetVelFac Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double) As Integer
	Declare Function LSX_GetVelFac Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
	Declare Function LSX_GetSpeedPoti Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pbSpePoti As Integer) As Integer
	Declare Function LSX_GetMotorCurrent Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdA As Double) As Integer
	Declare Function LSX_GetReduction Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdA As Double) As Integer
	Declare Function LSX_GetCurrentDelay Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plX As Integer, ByRef plY As Integer, ByRef plZ As Integer, ByRef plR As Integer) As Integer
	Declare Function LSX_SetOutFuncLev Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double) As Integer
	Declare Function LSX_GetOutFuncLev Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
	Declare Function LSX_GetActiveAxes Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plFlags As Integer) As Integer
	Declare Function LSX_GetAxisDirection Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plXD As Integer, ByRef plYD As Integer, ByRef plZD As Integer, ByRef plAD As Integer) As Integer
	Declare Function LSX_GetCalibOffset Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
	Declare Function LSX_GetRMOffset Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
	Declare Function LSX_GetCalibrateDir Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plXD As Integer, ByRef plYD As Integer, ByRef plZD As Integer, ByRef plAD As Integer) As Integer
	Declare Function LSX_SetCalibBackSpeed Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lSpeed As Integer) As Integer
	Declare Function LSX_GetCalibBackSpeed Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plSpeed As Integer) As Integer
	Declare Function LSX_SetRefSpeed Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lSpeed As Integer) As Integer
	Declare Function LSX_GetRefSpeed Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plSpeed As Integer) As Integer
	Declare Function LSX_SetPowerAmplifier Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal bAmplifier As Integer) As Integer
	Declare Function LSX_GetPowerAmplifier Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pbAmplifier As Integer) As Integer
	Declare Function LSX_SetMotorTablePatch Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal bActive As Integer) As Integer
	Declare Function LSX_GetMotorTablePatch Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pbActive As Integer) As Integer
	Declare Function LSX_SetJoystickFilter Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal bActive As Integer) As Integer
	Declare Function LSX_GetJoystickFilter Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pbActive As Integer) As Integer
	Declare Function LSX_SetStopPolarity Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal bHighActiv As Integer) As Integer
	Declare Function LSX_GetStopPolarity Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pbHighActiv As Integer) As Integer
	Declare Function LSX_SetVLevel Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lVRegion As Integer, ByVal dDownLevel As Double, ByVal dUppLevel As Double) As Integer
	Declare Function LSX_GetVLevel Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lVRegion As Integer, ByRef pdDownLevel As Double, ByRef pdUppLevel As Double) As Integer
	Declare Function LSX_SetStopAccel Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dXD As Double, ByVal dYD As Double, ByVal dZD As Double, ByVal dAD As Double) As Integer
	Declare Function LSX_GetStopAccel Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdXD As Double, ByRef pdYD As Double, ByRef pdZD As Double, ByRef pdAD As Double) As Integer
	Declare Function LSX_GetVersionStrInfo Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal pcVersInfo As String, ByVal lMaxLen As Integer) As Integer
	Declare Function LSX_GetStatusLimit Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal pcLimit As String, ByVal lMaxLen As Integer) As Integer
	Declare Function LSX_GetSecurityErr Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pValue As Object) As Integer
	Declare Function LSX_GetSecurityStatus Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pValue As Object) As Integer
	Declare Function LSX_GetDelay Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plDelay As Integer) As Integer
	Declare Function LSX_GetDistance Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
	Declare Function LSX_ClearPos Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lFlags As Integer) As Integer
	Declare Function LSX_SetDigJoySpeed Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double) As Integer
	Declare Function LSX_GetDigJoySpeed Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
